--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.8",
+    "@mui/x-date-pickers": "^7.28.0",
     "axios": "^1.8.4",
     "chart.js": "^4.4.8",
-    "date-fns": "^4.1.0",
+    "date-fns": "^2.30.0",
     "formik": "^2.4.6",
     "moment": "^2.30.1",
     "react": "^19.0.0",
